--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To-Do List</title>
+    <link href="style.css" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="title">
+        <h1>To-Do List</h1>
+    </div>
+    <div class="lists">
+        <li>To-Do 1
+            <button>x</button>
+        </li>
+        <li>To-Do 2
+            <button>x</button>
+        </li>
+        <li>To-Do 3
+            <button>x</button>
+        </li>
+        <li>To-Do 4
+            <button>x</button>
+        </li>
+        <li>To-Do 5
+            <button>x</button>
+        </li>
+    </div>
+    <button>add</button>
     
 </body>
 </html>
