--- a/index.html
+++ b/index.html
@@ -12,23 +12,38 @@
         <h1>To-Do List</h1>
     </div>
     <div class="lists">
-        <li>To-Do 1
-            <button>x</button>
-        </li>
-        <li>To-Do 2
-            <button>x</button>
-        </li>
-        <li>To-Do 3
-            <button>x</button>
-        </li>
-        <li>To-Do 4
-            <button>x</button>
-        </li>
-        <li>To-Do 5
-            <button>x</button>
-        </li>
+        <div class="item">
+            <input type="text" placeholder="Item 1..."/>
+            <button class="checkmark">
+                <img src="checkmark.png">
+            </button>
+        </div>
+        <div class="item">
+            <input type="text" placeholder="Item 2..."/>
+            <button class="checkmark">
+                <img src="checkmark.png">
+            </button>
+        </div>
+        <div class="item">
+            <input type="text" placeholder="Item 3..."/>
+            <button class="checkmark">
+                <img src="checkmark.png">
+            </button>
+        </div>
+        <div class="item">
+            <input type="text" placeholder="Item 4..."/>
+            <button class="checkmark">
+                <img src="checkmark.png">
+            </button>
+        </div>
+        <div class="item">
+            <input type="text" placeholder="Item 5..."/>
+            <button class="checkmark">
+                <img src="checkmark.png">
+            </button>
+        </div>
     </div>
-    <button>add</button>
+    <button class="add">+</button>
     
 </body>
 </html>
