add button completed

--- a/index.html
+++ b/index.html
@@ -24,26 +24,50 @@
                 <img src="checkmark.png">
             </button>
         </div>
-        <div class="item">
+        <div class="item" item>
             <input type="text" placeholder="Item 3..."/>
             <button class="checkmark">
                 <img src="checkmark.png">
             </button>
         </div>
-        <div class="item">
+        <div class="item" item>
             <input type="text" placeholder="Item 4..."/>
             <button class="checkmark">
                 <img src="checkmark.png">
             </button>
         </div>
-        <div class="item">
+        <div class="item" item>
             <input type="text" placeholder="Item 5..."/>
             <button class="checkmark">
                 <img src="checkmark.png">
             </button>
         </div>
+        <div class="item o" item>
+            <input type="text" placeholder="Item 6..."/>
+            <button class="checkmark">
+                <img src="checkmark.png">
+            </button>
+        </div>
+        <div class="item o" item>
+            <input type="text" placeholder="Item 7..."/>
+            <button class="checkmark">
+                <img src="checkmark.png">
+            </button>
+        </div>
+        <div class="item o" item>
+            <input type="text" placeholder="Item 8..."/>
+            <button class="checkmark">
+                <img src="checkmark.png">
+            </button>
+        </div>
+        <div class="item o" item>
+            <input type="text" placeholder="Item 9..."/>
+            <button class="checkmark">
+                <img src="checkmark.png">
+            </button>
+        </div>
     </div>
-    <button class="add">+</button>
+    <button class="add" id="add">+</button>
     
 </body>
 </html>
