--- a/index.html
+++ b/index.html
@@ -12,57 +12,57 @@
         <h1>To-Do List</h1>
     </div>
     <div class="lists">
-        <div class="item">
-            <input type="text" placeholder="Item 1..."/>
-            <button class="checkmark">
-                <img src="checkmark.png">
-            </button>
-        </div>
-        <div class="item">
-            <input type="text" placeholder="Item 2..."/>
-            <button class="checkmark">
+        <div class="item" item>
+            <input type="text" placeholder="Item 1..." text/>
+            <button class="checkmark" checkmark>
                 <img src="checkmark.png">
             </button>
         </div>
         <div class="item" item>
-            <input type="text" placeholder="Item 3..."/>
-            <button class="checkmark">
+            <input type="text" placeholder="Item 2..." text/>
+            <button class="checkmark" checkmark>
                 <img src="checkmark.png">
             </button>
         </div>
         <div class="item" item>
-            <input type="text" placeholder="Item 4..."/>
-            <button class="checkmark">
+            <input type="text" placeholder="Item 3..." text/>
+            <button class="checkmark" checkmark>
                 <img src="checkmark.png">
             </button>
         </div>
         <div class="item" item>
-            <input type="text" placeholder="Item 5..."/>
-            <button class="checkmark">
+            <input type="text" placeholder="Item 4..." text/>
+            <button class="checkmark" checkmark>
+                <img src="checkmark.png">
+            </button>
+        </div>
+        <div class="item" item>
+            <input type="text" placeholder="Item 5..." text/>
+            <button class="checkmark" checkmark>
                 <img src="checkmark.png">
             </button>
         </div>
         <div class="item o" item>
-            <input type="text" placeholder="Item 6..."/>
-            <button class="checkmark">
+            <input type="text" placeholder="Item 6..." text/>
+            <button class="checkmark" checkmark>
                 <img src="checkmark.png">
             </button>
         </div>
         <div class="item o" item>
-            <input type="text" placeholder="Item 7..."/>
-            <button class="checkmark">
+            <input type="text" placeholder="Item 7..." text/>
+            <button class="checkmark" checkmark>
                 <img src="checkmark.png">
             </button>
         </div>
         <div class="item o" item>
-            <input type="text" placeholder="Item 8..."/>
-            <button class="checkmark">
+            <input type="text" placeholder="Item 8..." text/>
+            <button class="checkmark" checkmark>
                 <img src="checkmark.png">
             </button>
         </div>
         <div class="item o" item>
-            <input type="text" placeholder="Item 9..."/>
-            <button class="checkmark">
+            <input type="text" placeholder="Item 9..." text/>
+            <button class="checkmark" checkmark>
                 <img src="checkmark.png">
             </button>
         </div>
